feat: implement stacktrace in register user endpoint
